test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/libraries/same_label_same_fun.plx
fn f(none) i32 {
    jump x
    return 0
    label x
    return 2
}

pub fn f_caller(none) i32 {
    return f()
}
